# feedback-optimized-slm-with-rlhf

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
infrastructure/bicep/: main.bicep  main.json  main.parameters.json
infrastructure/bicep/modules/: ai_search.bicep  cosmos.bicep  foundry.bicep  ml_workspace.bicep  role_assignments.bicep  storage.bicep
src/: config.py
src/data/: download_pubmedqa.py  index_documents.py  preprocess.py
src/deployment/: deploy.py  register.py  score.py
src/evaluation/: benchmarks.py  compare.py  metrics.py
src/feedback/: app.py  models.py  storage.py
src/judge/: ai_judge.py  models.py
src/pipeline/: azure_ml_pipeline.py  orchestrator.py
src/rag/: generator.py  pipeline.py  retriever.py
src/training/: dpo_trainer.py  merge_adapter.py  prepare_dpo_data.py
tests/: conftest.py  test_data.py  test_evaluation.py  test_judge.py  test_orchestrator.py  test_rag.py  test_training.py
