[project]
name = "feedback-optimized-slm-with-rlhf"
version = "0.2.0"
description = "Iterative RLAIF pipeline: RAG on Phi-4-mini with DPO fine-tuning from AI feedback (gpt-5.4 judge), benchmarked with Azure AI Evaluation, hosted on Azure."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=1.0.0rc4",
    "azure-ai-evaluation>=1.16",
    "azure-search-documents>=11.6",
    "azure-identity>=1.19",
    "azure-cosmos>=4.9",
    "azure-storage-blob>=12.24",
    "openai>=1.60",
    "transformers>=4.48",
    "trl>=0.14",
    "peft>=0.14",
    "bitsandbytes>=0.45",
    "datasets>=3.2",
    "mlflow>=2.19",
    "azureml-mlflow>=1.58",
    "pydantic-settings>=2.7",
    "typer>=0.15",
    "rich>=13.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[project.scripts]
download-data = "src.data.download_pubmedqa:main"
preprocess = "src.data.preprocess:main"
index-documents = "src.data.index_documents:main"
rag-demo = "src.rag.pipeline:demo"
rag-query = "src.rag.pipeline:query"
benchmark = "src.evaluation.benchmarks:main"
judge = "src.judge.ai_judge:main"
prepare-dpo = "src.training.prepare_dpo_data:main"
train-dpo = "src.training.dpo_trainer:main"
merge-adapter = "src.training.merge_adapter:main"
compare = "src.evaluation.compare:main"
rl-loop = "src.pipeline.orchestrator:main"
register-model = "src.deployment.register:main"
deploy-model = "src.deployment.deploy:main"
test-endpoint = "src.deployment.deploy:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
